fix: fixed bugs on propagation